// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apis/StyleSheet/createReactDOMStyle fontFamily fontFamily: "System" 1`] = `
Object {
  "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Ubuntu, \\"Helvetica Neue\\", sans-serif",
}
`;

exports[`apis/StyleSheet/createReactDOMStyle fontFamily general case 1`] = `
Object {
  "fontFamily": "Georgia, Times",
}
`;

exports[`apis/StyleSheet/createReactDOMStyle shortform -> longform 1`] = `
Object {
  "borderBottomColor": "white",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "1px",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "0px",
  "borderRightStyle": "solid",
  "borderRightWidth": "0px",
  "borderTopStyle": "solid",
  "borderTopWidth": "0px",
  "boxSizing": "border-box",
  "marginBottom": "25px",
  "marginLeft": "10px",
  "marginRight": "10px",
  "marginTop": "50px",
}
`;
